# trivor

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-Hans.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: pages.yml  release.yml
assets/i18n/: en.ftl  zh-Hans.ftl
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  mesh.rs  summary.rs  theme.rs
crates/i18n/: Cargo.toml
crates/i18n/src/: lib.rs
crates/loaders/: Cargo.toml
crates/loaders/src/: folder.rs  gltf_inspect.rs  gltf_loader.rs  gltf_optimize.rs  gltf_pack.rs  lib.rs  limits.rs
crates/macos/: Cargo.toml
crates/macos/src/: lib.rs  vibrancy.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs  shader.wgsl
crates/ui/: Cargo.toml  build.rs
crates/ui/src/: branding.rs  lib.rs  theme.rs  web_viewport.rs
crates/ui/ui/: components.slint  main.slint
crates/viewer/: Cargo.toml
crates/viewer/assets/: index.html
crates/viewer/src/: lib.rs  macos_overlay.rs
docs/: README.md  RELEASE.md  icon.md  large-models.md  large-models.zh-Hans.md
scripts/: build-macos-release.sh  changelog-extract.sh  fetch-gltfpack.sh  generate-dmg-background.sh
src/: app.ts  axis-widget.ts  bridge.ts  cutout-display-capture.ts  cutout-export.ts  cutout-flow.ts  cutout-frame-guide.ts  cutout-preview-panel.ts  fonts.ts  format.ts  library-menu.ts  library-path.ts  library-tree.ts  load-failure.ts  main.ts  model-path.ts  model-scene-access.ts  scene-guides.ts  scene-options.ts  scene-theme.ts  shortcuts.ts  titlebar.ts  types.ts  ui.ts  update-preferences.ts  viewer.ts  viewport-framing.ts
src-tauri/: Cargo.toml  Entitlements.mas.plist.example  Info.plist  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chrome.rs  commands.rs  lib.rs  macos_update.rs  main.rs  menu.rs  open_external.rs
src/styles/: components.css  layout.css  tokens.css
src/theme/: brand.ts  index.ts
website/: README.md  index.html  main.js  styles.css
