[package]
name = "trivor"
description = "Trivor (极视) — fast native 3D model viewer for macOS"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "trivor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tauri = { version = "2", features = ["protocol-asset", "http-range"] }
rfd.workspace = true
dark-light = "2"
window-vibrancy = "0.6"
trivor-core = { path = "../crates/core" }
trivor-i18n = { path = "../crates/i18n" }
trivor-loaders = { path = "../crates/loaders" }
