[package]
name = "trivor"
description = "Trivor (极视) — fast native 3D model viewer for macOS"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "trivor"
path = "src/main.rs"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
trivor-ui.workspace = true
trivor-macos.workspace = true
