[package]
name = "trivor-loaders"
description = "Model loaders for Trivor (极视)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
trivor-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
glam.workspace = true
gltf = { version = "1.4", features = ["import", "extensions", "allow_empty_texture"] }
image.workspace = true
base64 = "0.22"
rayon.workspace = true
