[package]
name = "trivor-macos"
description = "macOS-native integrations for Trivor (极视)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tracing.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-app-kit = { version = "0.2", features = [
    "NSVisualEffectView",
    "NSWindow",
    "NSView",
    "NSColor",
] }
raw-window-handle = "0.6"
winit = "0.30"
