[package]
name = "trivor-render"
description = "3D viewport rendering for Trivor (极视)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
trivor-core.workspace = true
tracing.workspace = true
glam.workspace = true
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.3"
wgpu = { version = "22", default-features = false, features = ["metal", "wgsl"] }
